k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-deployment
  labels:
    app: mkjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mkjs
  template:
    metadata:
      labels:
        app: mkjs
    spec:
      containers:
      - name: mkjs-app
        image: mkjs-prod:latest
        ports:
        - containerPort: 80
