k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkjs-service
spec:
  type: ClusterIP
  selector:
    app: mkjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
